test/code/test_class_interface_extends_error5.php
<?php

interface A {
    public function abc($a);
}

class C implements A, A {}

